# Pinocchio_test

./: BonnieURDF_latest.urdf  CMakeLists.txt  README.md  main.cpp  ur5_robot.urdf
